--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shayan/shayan-orm",
+    "name": "shayan-mmd/shayan-orm",
     "description": "A very simple tested orm for php",
     "type": "library",
     "require": {        
