--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,23 @@
 {
-
     "name": "shayan-mmd/shayan-orm",
-    "description": "A very simple tested orm for php",
+    "description": "a very simple orm for php.",
+    "license": "MIT",
+    "keywords": [
+        "orm",
+        "php",
+    ],
+    "authors": [
+        {
+            "name": "shayan mehmandoost",
+            "email": "shayanmehmandoost37@yahoo.com"
+        }
+    ],
     "require": {
-        "php": ">=8.2",
-        "phpunit/phpunit": "^9.6",
-        "fakerphp/faker": "^1.23"
+        "php": "^7.2 || ^8.0",
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "App/"
+        }
     }
 }
